[package]
name = "rustocker"
version = "0.1.0"
description = "A Docker TUI tool with Rust and Ratatui"
authors = ["Andrea Bartoli <andrea.bartoli@softcube.it>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7"
bollard = "0.19"
async-trait = "0.1"
chrono = "0.4.41"
